# news_stock_v3

./: Dockerfile  LICENSE  pyproject.toml  run_scripts
data/: config.py  data_api.py
data/db_utils/: conn_api.py  db_handle.py  queries.py
data/process_data/: batch_data.py  format_data.py  live_data.py
data/save_data/: news_data.py  predictions_data.py  stock_data.py
data/stock_tickers/: get_ticker_list.py  sp_500.csv  sp_500_with_sector.csv
model/: config.py  define_model.py  pipeline.py
server/: app.py  app2.py  bokeh_example.py  layout.py  news_data  plotly_example.py  process_data.py  stock_data
server/scratch/: bokeh_example.py  index3.html  plotly_example.py
server/templates/: main_page.html
