[tool.poetry]
name = "server"
version = "0.1.0"
description = "Example to create containerized python app"
authors = ["Vivek Khajuria <Vivek.Khajuria@target.com>"]

packages = [
    { include = "data" },
    { include = "model" },
    { include = "server" }
]

#[tool.poetry.scripts]
#train = "server.model.pipeline"

[tool.poetry.dependencies]
python = "^3.9"
click = "^8.1"
Flask = "^2.1.2"
goose3 = "^3.1.12"
transformers = "^4.24.0"
torch = [
    {url = "https://download.pytorch.org/whl/cu117/torch-1.13.0%2Bcu117-cp39-cp39-linux_x86_64.whl", markers = "sys_platform == 'linux'"},
    {url = "https://download.pytorch.org/whl/cpu/torch-1.13.0-cp39-none-macosx_10_9_x86_64.whl", markers = "sys_platform == 'darwin'"}
]
plotly = "^5.11.0"
dash = "^2.7.1"
yfinance = "^0.2.3"
pytz = "^2022.7"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"