[tool.poetry]
name = "server"
version = "0.1.0"
description = "Example to create containerized python app"
authors = ["Vivek Khajuria <Vivek.Khajuria@target.com>"]

packages = [
    { include = "data" },
    { include = "model" },
    { include = "server" }
]

#[tool.poetry.scripts]
#train = "server.model.pipeline"

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
click = "^8.1"
Flask = "^2.1.2"
goose3 = "^3.1.12"
transformers = "^4.30.2"
#torch = [
#    {url = "https://download.pytorch.org/whl/cpu/torch-2.0.0%2Bcpu-cp310-cp310-linux_x86_64.whl", markers = "sys_platform != 'darwin'"},
#    {url = "https://download.pytorch.org/whl/nightly/cpu/torch-2.1.0.dev20230508-cp310-none-macosx_11_0_arm64.whl", markers = "sys_platform == 'darwin' and platform_machine == 'arm64'"},
#    {url = "https://download.pytorch.org/whl/cpu/torch-2.0.1-cp310-none-macosx_10_9_x86_64.whl", markers = "sys_platform == 'darwin' and platform_machine != 'arm64'"}
#]
plotly = "^5.11.0"
dash = "^2.7.1"
yfinance = "^0.2.3"
pytz = "^2022.7"

[tool.poetry.dependencies.tensorflow]
version = "^2.9.0"
markers = "sys_platform != 'darwin'"

[tool.poetry.dependencies.tensorflow_macos]
version = "^2.9.0"
markers = "sys_platform == 'darwin'"

[tool.poetry.dependencies.tensorflow-metal]
version = "0.7.0" # https://pypi.org/project/tensorflow-metal/
markers = "sys_platform == 'darwin'"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"